[gd_scene load_steps=5 format=3 uid="uid://difk0co76h45t"]

[ext_resource type="Shader" path="res://shaders/BaseBlur.gdshader" id="1_kmehr"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_nko0t"]
[ext_resource type="FontFile" uid="uid://nrij3mx3apkq" path="res://assets/BaseFont.otf" id="3_uxu5u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_abjc1"]
shader = ExtResource("1_kmehr")
shader_parameter/lod = 2.0

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nko0t")

[node name="BlurBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_abjc1")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="GameOver" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 193.0
offset_top = 71.0
offset_right = 959.0
offset_bottom = 160.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_uxu5u")
theme_override_font_sizes/font_size = 70
text = "Game Over"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
layout_mode = 0
offset_left = 439.0
offset_top = 288.0
offset_right = 713.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uxu5u")
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="MainMenu" type="Button" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uxu5u")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
